--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ isort = "^5.13.2"   # Automatic sorting of imports
 ruff = "^0.9.2"     # Fast linter for Python
 mypy = "^1.14.1"
 django-stubs = "^5.1.2"
+pytest = "^8.3.4"
+pytest-django = "^4.9.0"
 pre-commit = "^4.0.1"
 
 [tool.black]
