--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Django settings
-SECRET_KEY=your-secret-key               # Secret key for the Django application
+SECRET_KEY="django-insecure-0dov#i_iquqbk!vu!pr1#ko132h@q!-b@qr-ma7wnax#7sy4$1  "            # Secret key for the Django application
 DEBUG=True                               # Enable debug mode (True for development, False for production)
 
 # Allowed hosts
