--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY="your-new-secret-key"            # Secret key for the Django applicat
 DEBUG=True                               # Enable debug mode (True for development, False for production)
 
 # Allowed hosts
-ALLOWED_HOSTS=localhost,127.0.0.1        # Comma-separated list of allowed hosts
+ALLOWED_HOSTS="localhost,127.0.0.1"        # Comma-separated list of allowed hosts
 
 # Database settings
 # Uncomment the database you want to use and comment the other
@@ -22,7 +22,7 @@ DB_NAME=db.sqlite3                       # SQLite database file path
 
 # Email settings
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend   # Email backend (e.g., SMTP, console)
-EMAIL_HOST=smtp.example.com             # SMTP server hostname
+EMAIL_HOST="smtp.example.com"            # SMTP server hostname
 EMAIL_PORT=587                           # SMTP server port (e.g., 587 for TLS)
 EMAIL_USE_TLS=True                       # Use TLS for secure connection
 EMAIL_HOST_USER=your-email@example.com   # SMTP username (email address)
