change DB to Postgres

--- a/.env.example
+++ b/.env.example
@@ -5,20 +5,13 @@ DEBUG=True                               # Enable debug mode (True for developme
 # Allowed hosts
 ALLOWED_HOSTS="localhost,127.0.0.1"        # Comma-separated list of allowed hosts
 
-# Database settings
-# Uncomment the database you want to use and comment the other
-
-# SQLite settings (default for development)
-DB_ENGINE=django.db.backends.sqlite3     # SQLite engine
-DB_NAME=db.sqlite3                       # SQLite database file path
-
-# PostgreSQL settings (uncomment to use)
-# DB_ENGINE=django.db.backends.postgresql  # PostgreSQL engine
-# DB_NAME=your-database-name               # PostgreSQL database name
-# DB_USER=your-database-user               # PostgreSQL username
-# DB_PASSWORD=your-database-password       # PostgreSQL password
-# DB_HOST=localhost                        # Host where PostgreSQL is running
-# DB_PORT=5432                             # PostgreSQL port (default 5432)
+# Database: PostgreSQL settings (default)
+DB_ENGINE=django.db.backends.postgresql     # Database engine (PostgreSQL)
+DB_NAME=mydatabase                          # PostgreSQL database name
+DB_USER=myuser                              # PostgreSQL username
+DB_PASSWORD=mypassword                      # PostgreSQL password
+DB_HOST=localhost                           # Host where PostgreSQL is running
+DB_PORT=5432                                # PostgreSQL port (default 5432)
 
 # Email settings
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend   # Email backend (e.g., SMTP, console)
