--- a/.env.example
+++ b/.env.example
@@ -3,15 +3,23 @@ SECRET_KEY="your-new-secret-key"            # Secret key for the Django applicat
 DEBUG=True                               # Enable debug mode (True for development, False for production)
 
 # Allowed hosts
-ALLOWED_HOSTS="localhost,127.0.0.1"        # Comma-separated list of allowed hosts
+# Comma-separated list of allowed hosts
+ALLOWED_HOSTS=127.0.0.1,localhost
 
-# Database: PostgreSQL settings (default)
-DB_ENGINE=django.db.backends.postgresql     # Database engine (PostgreSQL)
-DB_NAME=mydatabase                          # PostgreSQL database name
-DB_USER=myuser                              # PostgreSQL username
-DB_PASSWORD=mypassword                      # PostgreSQL password
-DB_HOST=localhost                           # Host where PostgreSQL is running
-DB_PORT=5432                                # PostgreSQL port (default 5432)
+# Django Database Settings
+DB_ENGINE=django.db.backends.postgresql     # Database engine for Django
+DB_NAME=example_db                          # Database name for Django
+DB_USER=example_user                              # Database username for Django
+DB_PASSWORD=example_password                      # Database password for Django
+
+# Use 'localhost' for local development or 'db' if using Docker Compose
+DB_HOST=localhost                           # Host for Django to connect to the database
+DB_PORT=5432                                # Port for Django to connect to the database
+
+# Docker PostgreSQL Settings
+POSTGRES_USER=example_user                        # PostgreSQL user created by Docker
+POSTGRES_PASSWORD=example_password                # PostgreSQL password created by Docker
+POSTGRES_DB=example_db                      # PostgreSQL database created by Docker
 
 # Email settings
 EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend   # Email backend (e.g., SMTP, console)
@@ -20,9 +28,3 @@ EMAIL_PORT=587                           # SMTP server port (e.g., 587 for TLS)
 EMAIL_USE_TLS=True                       # Use TLS for secure connection
 EMAIL_HOST_USER=your-email@example.com   # SMTP username (email address)
 EMAIL_HOST_PASSWORD=your-email-password  # SMTP password
-
-# Static and media files
-STATIC_URL=/static/                      # URL prefix for static files
-STATIC_ROOT=staticfiles/                 # Directory where static files are collected
-MEDIA_URL=/media/                        # URL prefix for media files
-MEDIA_ROOT=media/                        # Directory where media files are stored
