--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ readme = "README.md"      # Readme file for documentation
 python = ">=3.12"  # Minimum required Python version
 django = ">=5.1.5,<6.0.0"  # Django framework
 python-decouple = "^3.8"  # Manage environment variables securely
+psycopg2-binary = "^2.9.10"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]  # Poetry's core dependency
@@ -22,10 +23,10 @@ build-backend = "poetry.core.masonry.api"  # Backend for build system
 # Development dependencies
 black = "^24.10.0"  # Code formatter to enforce consistent style
 isort = "^5.13.2"   # Automatic sorting of imports
-ruff = "^0.9.2"     # Fast linter for Python
 pytest = "^8.3.4"        # Testing framework
 pytest-django = "^4.9.0" # Django-specific pytest extensions
 pre-commit = "^4.0.1"    # Pre-commit hook manager
+ruff = "^0.9.2"
 
 [tool.black]
 # Black configuration (code formatting)
