--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         python-version: ["3.12", "3.13"]
-        os: [ubuntu-latest, macOS-latest, windows-latest]
+        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
 
@@ -32,25 +32,6 @@ jobs:
       # Clone repository for access to codebase
       - name: Checkout Code
         uses: actions/checkout@v3
-
-      # Add Docker installation step for macOS and Windows runners
-      - name: Set up Docker (for macOS and Windows)
-        if: runner.os == 'macOS' || runner.os == 'Windows'
-        run: |
-          echo "Installing Docker..."
-          # Docker installation commands for macOS and Windows
-          # For macOS, using Homebrew
-          if [ $RUNNER_OS == 'macOS' ]; then
-            brew install --cask docker
-            open /Applications/Docker.app
-            sleep 15  # Wait for Docker to start
-          fi
-          # For Windows, using Chocolatey
-          if [ $RUNNER_OS == 'Windows' ]; then
-            choco install docker-desktop
-            Start-Process "C:\Program Files\Docker\Docker\Docker Desktop.exe"
-            Start-Sleep -Seconds 30
-          fi
 
       # Configure Python environment with specified version
       - name: Set up Python
