--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,7 +63,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install uv
-          uv install
+          uv pip install --requirements pyproject.toml
 
       # Run pre-commit hooks
       - name: Run Pre-commit Hooks
