--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,7 +62,8 @@ jobs:
       - name: Install UV Astral
         run: |
           python -m pip install --upgrade pip
-          pip install uv
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
 
       - name: Create and Use Virtual Environment
         run: |
