--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,10 +13,14 @@ jobs:
   test:
     strategy:
       matrix:
-        python-version: ["3.13"] # Specify Python version(s) to test
+        python-version: ["3.13"] # Specify Python version(s) to test / BUT use the version in pyproject.toml
         os: [ubuntu-latest] # Specify OS environment (Ubuntu in this case)
 
     runs-on: ${{ matrix.os }}
+
+    env:
+      # Configure a constant location for the uv cache
+      UV_CACHE_DIR: /tmp/.uv-cache
 
     services:
       db:
@@ -31,13 +35,13 @@ jobs:
     steps:
       # Clone repository for access to codebase
       - name: Checkout Code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       # Configure Python environment with specified version
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version-file: "pyproject.toml"
 
       # Set Environment Variables
       - name: Set Environment Variables
@@ -49,30 +53,22 @@ jobs:
           echo "DB_HOST=db" >> .env
           echo "DB_PORT=5432" >> .env
 
-      # Cache UV Astral dependencies for faster builds
-      - name: Cache UV Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/uv
-          key: ${{ runner.os }}-uv-${{ matrix.python-version }}
-          restore-keys: |
-            ${{ runner.os }}-uv-
-
       # Set up project dependencies using UV Astral
       - name: Install UV Astral
-        run: |
-          python -m pip install --upgrade pip
-      - name: Install uv
         uses: astral-sh/setup-uv@v5
 
-      - name: Create and Use Virtual Environment
-        run: |
-          uv venv create
-          uv venv use
-
-      # Sync dependencies with uv.lock (optional step)
+      # Sync dependencies with uv.lock
       - name: Sync Dependencies with uv.lock
         run: uv sync
+
+      - name: Restore uv cache
+        uses: actions/cache@v4
+        with:
+          path: /tmp/.uv-cache
+          key: uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+          restore-keys: |
+            uv-${{ runner.os }}-${{ hashFiles('uv.lock') }}
+            uv-${{ runner.os }}
 
       # Update pre-commit hooks to avoid deprecated stages
       - name: Update Pre-commit Hooks
@@ -95,5 +91,8 @@ jobs:
         run: uv run isort --check-only .
 
       # Execute Django test suite
-      - name: Run Django Tests
+      - name: Run Tests
         run: uv run pytest
+
+      - name: Minimize uv cache
+        run: uv cache prune --ci
