--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ license = "MIT"
 dependencies = [
     "django>=5.1.5,<6.0.0",
     "python-decouple>=3.8",
-    "psycopg[binary]>=2.9.10"
+    "psycopg[binary]>=3.0.0",
 ]
 
 [dependency-groups]
