--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,39 +1,22 @@
 [project]
 name = "django-template"
 version = "0.1.0"
-description = "A Django project template"
+description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-authors = [
-    { name = "Matus Kocik", email = "matuskocik@gmail.com" }
-]
-license = "MIT"
 dependencies = [
-    "django>=5.1.5,<6.0.0",
+    "django>=5.1.6",
+    "psycopg>=3.2.4",
     "python-decouple>=3.8",
-    "psycopg[binary]>=3.0.0",
 ]
 
 [dependency-groups]
 dev = [
-    "pip-tools>=6.12.3",
-    "black>=24.10.0",
-    "isort>=5.13.2",
+    "black>=25.1.0",
+    "django-extensions>=3.2.3",
+    "isort>=6.0.0",
     "pre-commit>=4.1.0",
     "pytest>=8.3.4",
     "pytest-django>=4.9.0",
-    "ruff>=0.9.2"
+    "ruff>=0.9.5",
 ]
-
-[tool.black]
-line-length = 88
-
-[tool.isort]
-profile = "black"
-
-[tool.ruff]
-line-length = 88
-
-[tool.ruff.lint]
-select = ["E", "F", "I"]
-fixable = ["I"]
